[gd_scene load_steps=16 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://addons/dialogue_manager/example_balloon/example_balloon.gd" id="1_aerml"]
[ext_resource type="Texture2D" uid="uid://bavy27af7dlxp" path="res://Assets/sprites/ui/uichanoar-02 (1).png" id="3_goc4n"]
[ext_resource type="FontFile" uid="uid://cr6w2cpg566wo" path="res://Assets/fonts/LibreBaskerville-Regular.ttf" id="5_1b2e1"]
[ext_resource type="FontFile" uid="uid://csbekciwi04ic" path="res://Assets/fonts/HabitaScenic_PERSONAL_USE_ONLY.otf" id="5_qw5pn"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="6_shopr"]
[ext_resource type="FontFile" uid="uid://triks3gj3uap" path="res://Assets/fonts/LibreBaskerville-Bold.ttf" id="6_v5aim"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="7_5olvw"]
[ext_resource type="FontFile" uid="uid://cmg7fiw4n40cx" path="res://Assets/fonts/LibreBaskerville-Italic.ttf" id="7_lu30y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8vcf3"]
texture = ExtResource("3_goc4n")
region_rect = Rect2(116, 600, 1688, 356)

[sub_resource type="Theme" id="Theme_ev8sx"]

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_aerml")

[node name="MolduraNPC" type="Sprite2D" parent="."]
position = Vector2(1626.59, 652.53)
scale = Vector2(0.491515, 0.491515)

[node name="MolduraPlayer" type="Sprite2D" parent="."]
position = Vector2(289, 652.53)
scale = Vector2(-0.492, 0.492)
flip_h = true

[node name="Balloon" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 133.0
offset_top = -350.0
offset_right = -233.934
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_qq3yp")
theme_override_styles/panel = SubResource("StyleBoxTexture_8vcf3")

[node name="Dialogue" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = 30.0
offset_right = -102.066
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Dialogue"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Dialogue/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/table_odd_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_qw5pn")
theme_override_fonts/bold_font = ExtResource("5_qw5pn")
theme_override_fonts/italics_font = ExtResource("5_qw5pn")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Dialogue/VBoxContainer" instance=ExtResource("6_shopr")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_1b2e1")
theme_override_fonts/bold_font = ExtResource("6_v5aim")
theme_override_fonts/italics_font = ExtResource("7_lu30y")
theme_override_font_sizes/normal_font_size = 28
text = "Dialogue..."

[node name="Responses" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.226
anchor_top = 0.166
anchor_right = 0.961
anchor_bottom = 0.168
offset_left = 523.007
offset_top = -192.95
offset_right = -18.4965
offset_bottom = -26.19
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ev8sx")

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("7_5olvw")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_1b2e1")
text = "Response example"

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
